Fix text overflow on ArtifactExplorer and FileDetailModal ab#307

--- a/src/Client/Shared/Components/FileDetailView.razor.scss
+++ b/src/Client/Shared/Components/FileDetailView.razor.scss
@@ -31,6 +31,8 @@
             font-family: $open-sans-regular;
             line-height: $line-height-30;
             color: color(gray-content1);
+            text-overflow: ellipsis;
+            overflow: hidden;
         }
     }
 
